# asset

./: CONTRIBUTING.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/: .env  file-filters.yml
.github/actions/cache-crate/: action.yml
.github/actions/cache-programs/: action.yml
.github/actions/install-rust/: action.yml
.github/actions/install-solana/: action.yml
.github/workflows/: build-cli.yml  build-programs.yml  build-rust-client.yml  create-proposal.yml  deploy-programs.yml  main.yml  publish-js-client.yml  publish-rust-client.yml  publish-rust-interface.yml  publish-rust-types.yml  test-js-client.yml  test-programs.yml  test-rust-client.yml  version-programs.yml
clients/asset/js/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/asset/js/src/: index.ts  initialize.ts  mint.ts  types.ts  updateWithBuffer.ts  write.ts
clients/asset/js/test/: approve.test.ts  approve.ts  burn.test.ts  close.test.ts  create.test.ts  delegate.test.ts  initialize.test.ts  lock.test.ts  mint.test.ts  revoke.test.ts  transfer.test.ts  unlock.test.ts  update.test.ts
clients/asset/rust/: Cargo.toml  README.md
clients/asset/rust/src/: lib.rs  mint.rs
clients/asset/rust/tests/: create.rs
clients/bridge/js/: package.json  pnpm-lock.yaml
clients/bridge/js/src/: pda.ts
clients/bridge/js/test/: create.test.ts
clients/bridge/rust/: CONTRIBUTING.md  Cargo.toml
clients/bridge/rust/src/: lib.rs
clients/cli/: Cargo.toml  README.md
clients/cli/example_extensions/: asset.json  creators-asset.json  creators.json  image-asset.json  royalites-asset.json
clients/cli/src/: args.rs  lib.rs  main.rs  setup.rs  transaction.rs
clients/cli/src/commands/: approve.rs  burn.rs  create.rs  decode.rs  delegate.rs  first.rs  lock.rs  mint.rs  mint_batch.rs  mod.rs  revoke.rs  transfer.rs  unlock.rs
clients/js/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
clients/js/asset/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/js/asset/src/: allocate.ts  approve.ts  burn.ts  create.ts  group.ts  handover.ts  index.ts  initialize.ts  lock.ts  mint.ts  remove.ts  resize.ts  revoke.ts  transfer.ts  ungroup.ts  unlock.ts  unverify.ts  update.ts  updateWithBuffer.ts  verify.ts  write.ts
clients/js/asset/test/: _setup.ts  allocate.test.ts  approve.test.ts  burn.test.ts  close.test.ts  create.test.ts  group.test.ts  handover.test.ts  initialize.test.ts  lock.test.ts  mint.test.ts  remove.test.ts  resize.test.ts  revoke.test.ts  royalties.test.ts  royalties.ts  transfer.test.ts  ungroup.test.ts  unlock.test.ts  unverify.test.ts  update.test.ts  verify.test.ts
clients/js/bridge/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml
clients/js/bridge/src/: index.ts  pda.ts  plugin.ts
clients/js/bridge/test/: _setup.ts  bridge.test.ts  create.test.ts  royalties.test.ts
clients/js/proxy/: README.md  package.json
clients/js/proxy/src/: pda.ts  plugin.ts
clients/js/proxy/test/: _setup.ts  approve.test.ts  create.test.ts  transfer.test.ts  update.test.ts
clients/js/src/: index.ts  initialize.ts  plugin.ts  write.ts
clients/js/test/: _setup.ts  burn.ts  create.test.ts  initialize.test.ts  transfer.ts
clients/rust/: CONTRIBUTING.md  Cargo.toml
clients/rust/asset/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/asset/src/: impls.rs  lib.rs  mint.rs
clients/rust/asset/src/hooked/: delegate_roles.rs  mod.rs  nullable_public_key.rs
clients/rust/asset/tests/: create.rs  extensions.rs  handover.rs  mint.rs  update.rs  utils.rs
clients/rust/asset/tests/fixtures/: royalties-denylist.json  royalties.json
clients/rust/asset/tests/properties/: mod.rs
clients/rust/asset/tests/royalties/: mod.rs
clients/rust/bridge/: CONTRIBUTING.md  Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
configs/: kinobi-asset.cjs  kinobi-bridge.cjs  kinobi-interface.cjs  kinobi-proxy.cjs  kinobi.cjs  shank.cjs  validator.cjs
configs/scripts/: LICENSE.third-party
configs/scripts/client/: install-cli.sh  test-js.sh  test-rust.sh
configs/scripts/program/: build.sh  clean.sh  dump.sh
idls/: asset-program.kinobi.json  asset_program.json  bridge_program.json  nifty_asset_interface.json  proxy_program.json
include-idl/: Cargo.toml  README.md
include-idl-cli/: Cargo.toml  README.md
include-idl-cli/src/: main.rs
include-idl/src/: lib.rs  parse.rs  shrink.rs
programs/asset/: Cargo.toml  README.md
programs/asset/interface/: Cargo.toml  README.md
programs/asset/interface/src/: interface.rs  lib.rs  processor.rs
programs/asset/program/: Cargo.toml  build.rs
programs/asset/program/src/: SECURITY.md  entrypoint.rs  error.rs  instruction.rs  lib.rs  utils.rs
programs/asset/program/src/processor/: allocate.rs  approve.rs  burn.rs  close.rs  create.rs  delegate.rs  group.rs  handover.rs  lock.rs  mod.rs  remove.rs  resize.rs  revoke.rs  transfer.rs  ungroup.rs  unlock.rs  unverify.rs  update.rs  verify.rs  write.rs
programs/asset/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  utils.rs
programs/asset/src/extensions/: attributes.rs  blob.rs  creators.rs  image.rs  mod.rs  (+1 more)
programs/asset/types/: Cargo.toml  README.md
programs/asset/types/src/: error.rs  lib.rs  validation.rs
programs/asset/types/src/constraints/: and.rs  empty.rs  mod.rs  not.rs  or.rs  owned_by.rs  pubkey_match.rs
programs/asset/types/src/extensions/: attributes.rs  blob.rs  bucket.rs  creators.rs  grouping.rs  links.rs  manager.rs  metadata.rs  mod.rs  properties.rs  proxy.rs  royalties.rs  subscription.rs
programs/asset/types/src/state/: asset.rs  delegate.rs  mod.rs
programs/bridge/: Cargo.toml  README.md
programs/bridge/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs
programs/bridge/src/processor/: bridge.rs  create.rs  mod.rs
programs/bridge/src/state/: bridged_asset.rs  mod.rs  vault.rs
programs/proxy/: Cargo.toml  README.md
programs/proxy/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
programs/proxy/src/processor/: create.rs  mod.rs  transfer.rs  update.rs
(+60 files in other folders)
