[package]
name = "solana-include-idl"
description = "A collection of macro and helpers to manage IDL stored on the program binary"
version = "0.1.0"
edition = "2021"
license-file = "Apache-2.0"

[features]
shrink = ["dep:flate2"]
parse = ["dep:flate2", "dep:goblin", "dep:serde_json"]

[dependencies]
flate2 = { version = "1.0", optional = true }
goblin = { version = "0.8.2", optional = true }
serde_json = { version = "^1.0", optional = true }
