[package]
name = "nifty-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nifty"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
borsh = { version = "0.9.3" }
clap = { version = "4.4.10", features = ["derive"] }
dirs = "5.0.1"
indexmap = { version = "2.1.0", features = ["serde"] }
serde = "1.0.193"
serde_json = "1.0.108"
serde_with = "3.4.0"
serde_yaml = "0.9.27"
solana-client = "1.17.6"
solana-logger = "1.17.6"
solana-program = "1.17.6"
solana-sdk = "1.17.6"
