[package]
name = "nifty-cli"
version = "0.0.0"
authors = ["nifty-oss maintainers <maintainers@nifty-oss.org>"]
edition = "2021"
readme = "README.md"
license-file = "../../LICENSE"

[[bin]]
name = "nifty"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
borsh = { version = "0.9.3" }
clap = { version = "4.4.10", features = ["derive"] }
dirs = "5.0.1"
indexmap = { version = "2.1.0", features = ["serde"] }
indicatif = "0.17.8"
nifty-asset = { path = "../rust/asset", features = ["serde"] }
nifty-asset-types = { path = "../../programs/asset/types" }
podded = "0.5.1"
retry = "2.0.0"
serde = "1.0.193"
serde_json = "1.0.108"
serde_with = "3.4.0"
serde_yaml = "0.9.27"
solana-client = ">1.14, <1.18"
solana-logger = ">1.14, <1.18"
solana-program = ">1.14, <1.18"
solana-sdk = ">1.14, <1.18"
tokio = "1.35.1"
