[package]
name = "bridge-program"
version = "0.1.0"
edition = "2021"
readme = "./README.md"
license-file = "../../LICENSE"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "^0.10"
bytemuck = { version = "1.14.0", features = ["derive"] }
mpl-token-metadata = "4.0.0"
nifty-asset = { version = "0.1.0", path = "../../clients/rust/asset" }
nifty-asset-types = { version = "^0", path = "../asset/types" }
num-derive = "^0.3"
num-traits = "^0.2"
podded = "0.5.0"
shank = "0.3.0"
solana-program = "~1.16"
spl-token-2022 = "0.9"
thiserror = "^1.0"
