[package]
name = "nifty-asset"
description = "A client SDK for Nifty Asset program"
authors = ["nifty-oss maintainers <maintainers@nifty-oss.org>"]
repository = "https://github.com/nifty-oss/asset"
version = "0.0.0"
edition = "2021"
readme = "README.md"
license-file = "../../../LICENSE"

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with", "kaigan/serde"]

[dependencies]
borsh = "^0.10"
kaigan = "0.2.4"
nifty-asset-types = { version = "0.0.1-alpha.1", path = "../../../programs/asset/types" }
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "^1.16"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "^1.16"
solana-sdk = "^1.16"
serde_json = { version = "^1.0" }
