[package]
name = "nifty-bridge"
version = "0.0.0"
description = "A client SDK for Nifty Bridge program"
authors = ["nifty-oss maintainers <maintainers@nifty-oss.org>"]
edition = "2021"
readme = "README.md"
license-file = "../../../LICENSE"

[features]
test-sbf = []
serde = ["dep:serde", "dep:serde_with"]

[dependencies]
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
solana-program = "^1.16"
thiserror = "^1.0"

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "^1.16"
solana-sdk = "^1.16"
