[package]
name = "asset-program"
version = "0.2.0"
authors = ["nifty-oss maintainers <maintainers@nifty-oss.org>"]
edition = "2021"
readme = "./README.md"
license-file = "Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
logging = []

[dependencies]
borsh = "^0.10"
bytemuck = "1.14"
shank = "0.3.0"
nifty-asset-types = { path = "../types" }
num-derive = "^0.3"
num-traits = "^0.2"
solana-security-txt = "1.1.1"
solana-program = "~1.16"
thiserror = "^1.0"
