[package]
name = "nifty-asset-types"
version = "0.0.1"
description = "Nifty Asset Types"
authors = ["Nifty Team <contact@nifty-oss.org>"]
repository = "https://github.com/nifty-oss/asset"
edition = "2021"
readme = "README.md"
license-file = "../../../LICENSE"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.10.3"
bytemuck = "1.14"
podded = "0.5.1"
solana-program = "~1.16"
